# rhe

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
data/: brief_candidates.txt  five_key_analysis.py  homophones.txt  syllable_table.py
src/: briefs.rs  briefs_data.rs  chord_map.rs  chord_state.rs  data.rs  drill.rs  hand.rs  interpreter.rs  key_mask.rs  layout.rs  main.rs  number_data.rs  number_forms.rs  ordered_briefs_data.rs  scan.rs  state_machine.rs  suffixes_data.rs  table_gen.rs  tray.rs  tutor.rs  wiki.rs  word_lookup.rs
src/input/: cgevent_backend.rs  evdev_backend.rs  iohid_backend.rs  mod.rs  rdev_backend.rs
src/output/: linux.rs  macos.rs  mod.rs
src/preferences/: briefs.rs  chord_map.rs  layout.rs  mod.rs  number_data.rs
src/tutor/: drill.rs  mod.rs
src/tutor/ui/: compositor.rs  drawing.rs  mod.rs  text_rasterizing.rs  theme.rs
src/ui/: compositor.rs  mod.rs  photon_chrome.rs  primitives.rs  renderer_linux_softbuffer.rs  renderer_macos_softbuffer.rs  text_rasterizing.rs  theme.rs
