[package]
name = "rhe"
version = "0.0.0"
edition = "2024"
description = "Rhe — from Greek ῥέω (to flow). A first-principles stenography engine using temporal hand ordering."
license = "MPL-2.0"

[dependencies]
rdev = { version = "0.5", features = ["unstable_grab"] }
tray-icon = "0.22"
tao = "0.34"
ratatui = "0.29"
crossterm = "0.28"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
foreign-types = "0.5"

[dev-dependencies]
