[package]
name = "rhe"
version = "0.0.4"
edition = "2024"
default-run = "rhe"
description = "Rhe — from Greek ῥέω (to flow). A first-principles stenography engine using temporal hand ordering."
license = "MPL-2.0"
repository = "https://github.com/nickspiker/rhe"
homepage = "https://github.com/nickspiker/rhe"
documentation = "https://github.com/nickspiker/rhe"
readme = "README.md"
keywords = ["stenography", "chording", "phonetic", "typing", "input"]
categories = ["command-line-utilities"]
exclude = [
    "data/en_freq.txt",
    "data/cmudict.dict",
    "data/*.py",
    "logo.png",
    "tutor_debug.log",
    "target/*",
]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ureq = "2"
tray-icon = "0.22"
winit = "0.30.12"
softbuffer = "0.4"
cosmic-text = "0.14.2"

[target.'cfg(target_os = "macos")'.dependencies]
rdev = { version = "0.5", features = ["unstable_grab"] }
core-graphics = "0.24"
core-foundation = "0.10"
foreign-types = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
xkbcommon = "0.9"

[dev-dependencies]
